HW1/csce322hw001pt01Parser.java
// Generated from csce322hw001pt01.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class csce322hw001pt01Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, SECTIONBEGIN=3, SECTIONEND=4, GAMEBEGIN=5, GAMEEND=6, 
		TITLESYMBOL=7, LISTBEGIN=8, LISTEND=9, SECTIONNAME=10, NUMBER=11, DASH=12, 
		ENDROW=13, VALUESEPARATOR=14, ASSIGNVALUE=15, WS=16;
	public static final int
		RULE_greaterThanSudoku = 0, RULE_section = 1, RULE_title = 2, RULE_list = 3, 
		RULE_game = 4, RULE_listValue = 5, RULE_gameBoard = 6, RULE_gameRow = 7, 
		RULE_listSymbol = 8, RULE_gameSymbol = 9;
	public static final String[] ruleNames = {
		"greaterThanSudoku", "section", "title", "list", "game", "listValue", 
		"gameBoard", "gameRow", "listSymbol", "gameSymbol"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'<'", "'>'", "'%section%'", "'$section'", "'%game%'", "'$game'", 
		"'%title%'", null, null, null, null, "'-'", "'/n'", "'^'", "'=>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "SECTIONBEGIN", "SECTIONEND", "GAMEBEGIN", "GAMEEND", 
		"TITLESYMBOL", "LISTBEGIN", "LISTEND", "SECTIONNAME", "NUMBER", "DASH", 
		"ENDROW", "VALUESEPARATOR", "ASSIGNVALUE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "csce322hw001pt01.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public csce322hw001pt01Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GreaterThanSudokuContext extends ParserRuleContext {
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public TerminalNode EOF() { return getToken(csce322hw001pt01Parser.EOF, 0); }
		public GreaterThanSudokuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_greaterThanSudoku; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterGreaterThanSudoku(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitGreaterThanSudoku(this);
		}
	}

	public final GreaterThanSudokuContext greaterThanSudoku() throws RecognitionException {
		GreaterThanSudokuContext _localctx = new GreaterThanSudokuContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_greaterThanSudoku);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 System.out.println( "\nStart File "); 
			setState(21);
			section();
			setState(22);
			section();
			setState(23);
			section();
			 System.out.println( "\nCease File\n"); 
			setState(25);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public Token SECTIONBEGIN;
		public Token SECTIONEND;
		public TerminalNode SECTIONBEGIN() { return getToken(csce322hw001pt01Parser.SECTIONBEGIN, 0); }
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public TerminalNode SECTIONEND() { return getToken(csce322hw001pt01Parser.SECTIONEND, 0); }
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			((SectionContext)_localctx).SECTIONBEGIN = match(SECTIONBEGIN);
			 System.out.println( "\nStart Section: " + (((SectionContext)_localctx).SECTIONBEGIN!=null?((SectionContext)_localctx).SECTIONBEGIN.getText():null) ); 
			setState(29);
			title();
			setState(30);
			((SectionContext)_localctx).SECTIONEND = match(SECTIONEND);
			 System.out.println( "Cease Section: " + (((SectionContext)_localctx).SECTIONEND!=null?((SectionContext)_localctx).SECTIONEND.getText():null) ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public Token TITLESYMBOL;
		public Token SECTIONNAME;
		public Token ASSIGNVALUE;
		public TerminalNode TITLESYMBOL() { return getToken(csce322hw001pt01Parser.TITLESYMBOL, 0); }
		public TerminalNode SECTIONNAME() { return getToken(csce322hw001pt01Parser.SECTIONNAME, 0); }
		public TerminalNode ASSIGNVALUE() { return getToken(csce322hw001pt01Parser.ASSIGNVALUE, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public List<GameContext> game() {
			return getRuleContexts(GameContext.class);
		}
		public GameContext game(int i) {
			return getRuleContext(GameContext.class,i);
		}
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitTitle(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_title);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			((TitleContext)_localctx).TITLESYMBOL = match(TITLESYMBOL);
			setState(34);
			match(T__0);
			setState(35);
			((TitleContext)_localctx).SECTIONNAME = match(SECTIONNAME);
			setState(36);
			match(T__1);
			 System.out.println( "\tLabel: " + (((TitleContext)_localctx).TITLESYMBOL!=null?((TitleContext)_localctx).TITLESYMBOL.getText():null) + '<' + (((TitleContext)_localctx).SECTIONNAME!=null?((TitleContext)_localctx).SECTIONNAME.getText():null) + '>' ); 
			setState(38);
			((TitleContext)_localctx).ASSIGNVALUE = match(ASSIGNVALUE);
			 System.out.println( "\tAssign: " + (((TitleContext)_localctx).ASSIGNVALUE!=null?((TitleContext)_localctx).ASSIGNVALUE.getText():null) ); 
			setState(46);
			switch (_input.LA(1)) {
			case LISTBEGIN:
				{
				setState(40);
				list();
				}
				break;
			case GAMEBEGIN:
				{
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(41);
					game();
					}
					}
					setState(44); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==GAMEBEGIN );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public Token LISTBEGIN;
		public Token LISTEND;
		public TerminalNode LISTBEGIN() { return getToken(csce322hw001pt01Parser.LISTBEGIN, 0); }
		public TerminalNode LISTEND() { return getToken(csce322hw001pt01Parser.LISTEND, 0); }
		public List<ListValueContext> listValue() {
			return getRuleContexts(ListValueContext.class);
		}
		public ListValueContext listValue(int i) {
			return getRuleContext(ListValueContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((ListContext)_localctx).LISTBEGIN = match(LISTBEGIN);
			 System.out.println( "\t\tStart List: " + (((ListContext)_localctx).LISTBEGIN!=null?((ListContext)_localctx).LISTBEGIN.getText():null) ); 
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				listValue();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER );
			setState(55);
			((ListContext)_localctx).LISTEND = match(LISTEND);
			 System.out.println( "\t\tCease List: " + (((ListContext)_localctx).LISTEND!=null?((ListContext)_localctx).LISTEND.getText():null) ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GameContext extends ParserRuleContext {
		public Token GAMEBEGIN;
		public Token GAMEEND;
		public TerminalNode GAMEBEGIN() { return getToken(csce322hw001pt01Parser.GAMEBEGIN, 0); }
		public GameBoardContext gameBoard() {
			return getRuleContext(GameBoardContext.class,0);
		}
		public TerminalNode GAMEEND() { return getToken(csce322hw001pt01Parser.GAMEEND, 0); }
		public GameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_game; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterGame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitGame(this);
		}
	}

	public final GameContext game() throws RecognitionException {
		GameContext _localctx = new GameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_game);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((GameContext)_localctx).GAMEBEGIN = match(GAMEBEGIN);
			 System.out.println( "\t\tStart Game: " + (((GameContext)_localctx).GAMEBEGIN!=null?((GameContext)_localctx).GAMEBEGIN.getText():null) ); 
			setState(60);
			gameBoard();
			setState(61);
			((GameContext)_localctx).GAMEEND = match(GAMEEND);
			 System.out.println( "\t\tCease Game: " + (((GameContext)_localctx).GAMEEND!=null?((GameContext)_localctx).GAMEEND.getText():null) ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListValueContext extends ParserRuleContext {
		public List<ListSymbolContext> listSymbol() {
			return getRuleContexts(ListSymbolContext.class);
		}
		public ListSymbolContext listSymbol(int i) {
			return getRuleContext(ListSymbolContext.class,i);
		}
		public TerminalNode VALUESEPARATOR() { return getToken(csce322hw001pt01Parser.VALUESEPARATOR, 0); }
		public ListValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterListValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitListValue(this);
		}
	}

	public final ListValueContext listValue() throws RecognitionException {
		ListValueContext _localctx = new ListValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listValue);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(64);
					listSymbol();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(67); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(70);
			_la = _input.LA(1);
			if (_la==VALUESEPARATOR) {
				{
				setState(69);
				match(VALUESEPARATOR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GameBoardContext extends ParserRuleContext {
		public List<GameRowContext> gameRow() {
			return getRuleContexts(GameRowContext.class);
		}
		public GameRowContext gameRow(int i) {
			return getRuleContext(GameRowContext.class,i);
		}
		public GameBoardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gameBoard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterGameBoard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitGameBoard(this);
		}
	}

	public final GameBoardContext gameBoard() throws RecognitionException {
		GameBoardContext _localctx = new GameBoardContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_gameBoard);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				gameRow();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER || _la==DASH );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GameRowContext extends ParserRuleContext {
		public Token ENDROW;
		public List<GameSymbolContext> gameSymbol() {
			return getRuleContexts(GameSymbolContext.class);
		}
		public GameSymbolContext gameSymbol(int i) {
			return getRuleContext(GameSymbolContext.class,i);
		}
		public TerminalNode ENDROW() { return getToken(csce322hw001pt01Parser.ENDROW, 0); }
		public GameRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gameRow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterGameRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitGameRow(this);
		}
	}

	public final GameRowContext gameRow() throws RecognitionException {
		GameRowContext _localctx = new GameRowContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_gameRow);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(77);
					gameSymbol();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(80); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(83);
			_la = _input.LA(1);
			if (_la==ENDROW) {
				{
				setState(82);
				((GameRowContext)_localctx).ENDROW = match(ENDROW);
				}
			}


			                          if ((((GameRowContext)_localctx).ENDROW!=null?((GameRowContext)_localctx).ENDROW.getText():null) != null)
			                          {
			                            System.out.println( "\t\t\tCease Row        : " + (((GameRowContext)_localctx).ENDROW!=null?((GameRowContext)_localctx).ENDROW.getText():null) );
			                          }
			                        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListSymbolContext extends ParserRuleContext {
		public Token NUMBER;
		public TerminalNode NUMBER() { return getToken(csce322hw001pt01Parser.NUMBER, 0); }
		public ListSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listSymbol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterListSymbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitListSymbol(this);
		}
	}

	public final ListSymbolContext listSymbol() throws RecognitionException {
		ListSymbolContext _localctx = new ListSymbolContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listSymbol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((ListSymbolContext)_localctx).NUMBER = match(NUMBER);
			 System.out.println( "\t\t\tNumerical Symbol : " + (((ListSymbolContext)_localctx).NUMBER!=null?((ListSymbolContext)_localctx).NUMBER.getText():null) ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GameSymbolContext extends ParserRuleContext {
		public Token NUMBER;
		public Token DASH;
		public TerminalNode NUMBER() { return getToken(csce322hw001pt01Parser.NUMBER, 0); }
		public TerminalNode DASH() { return getToken(csce322hw001pt01Parser.DASH, 0); }
		public GameSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gameSymbol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).enterGameSymbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof csce322hw001pt01Listener ) ((csce322hw001pt01Listener)listener).exitGameSymbol(this);
		}
	}

	public final GameSymbolContext gameSymbol() throws RecognitionException {
		GameSymbolContext _localctx = new GameSymbolContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_gameSymbol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			switch (_input.LA(1)) {
			case NUMBER:
				{
				setState(90);
				((GameSymbolContext)_localctx).NUMBER = match(NUMBER);
				 System.out.println( "\t\t\tNumerical Symbol : " + (((GameSymbolContext)_localctx).NUMBER!=null?((GameSymbolContext)_localctx).NUMBER.getText():null) ); 
				}
				break;
			case DASH:
				{
				setState(92);
				((GameSymbolContext)_localctx).DASH = match(DASH);
				 System.out.println( "\t\t\tOpen Space       : " + (((GameSymbolContext)_localctx).DASH!=null?((GameSymbolContext)_localctx).DASH.getText():null) ); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}